--- a/public/static/styles.css
+++ b/public/static/styles.css
@@ -1,11 +1,52 @@
+html {
+  font-size: 62.5%;
+}
+
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.page-header {
+  margin: 0;
+  padding: 2rem;
+  background-color: #4DAAA7;
+}
+
+.content {
+  padding: 2rem;
+}
+
+.page-header h1 {
+  margin: 0;
+}
+
+.project-name-input {
+  width: 100%;
+  padding: .5rem;
+}
+
+.project-list {
+  padding-top: 2rem;
+}
+
+.project-list li {
+  margin-bottom: 1rem;
+  border-radius: 3px;
+  border: 1px solid #eee;
+  padding: .5rem;
+  transition: background-color .2s;
+}
+
+.project-list a {
+  display: block;
+}
+
+.project-list li:hover {
+  background-color: #60cac6;
+}
+
 .project-file-view {
   display: none;
-}
-
-.hide {
-  display: none;
-}
-
-.show {
-  display: block;
 }
